# chatbot-rag

./: .gitignore  Pipfile  README.md  demo.py  haystack-docling.py  haystack_rag.py  langchain_rag.py  main.py  pdf_loader.py  pyproject.toml  vector_index.pkl
faiss_index/: index.faiss  index.pkl
