[project]
name = "chatbot-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "gradio>=5.42.0",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "qdrant-haystack>=9.2.0",
    "openai>=1.100.1",
    "langchain-text-splitters>=0.3.9",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "haystack-ai>=2.17.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "python-docx>=0.8.11",
    "nltk>=3.9.1",
    "docling>=2.45.0",
]
